# real_estate_crm

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
real_estate_app/: admin.py  apps.py  models.py  urls.py  views.py
real_estate_app/management/commands/: start_bot.py
real_estate_app/migrations/: 0001_initial.py  0002_object_latitude_object_longitude_and_more.py  0003_alter_object_object_type.py  0004_alter_object_address_alter_object_city.py  0005_alter_object_floors.py
real_estate_app/static/admin/css/: custom.css
real_estate_app/templates/admin/: base_site.html  index.html
real_estate_crm/: urls.py  wsgi.py
real_estate_crm/settings/: __init__.py  base.py  development.py  production.py
